# retadys

./: README.md  README.rst  build.sh  config.py  pyproject.toml  requirements.txt  retadys_logo.xcf  run.py
retadys/: __init__.py  main.py  worktime.py
retadys/mod_admin/: controllers.py  models.py
retadys/mod_root/: controllers.py  models.py
retadys/static/js/: script.js
retadys/templates/: base.html
retadys/templates/admin/: index.html
webapp/: __init__.py  db.py  mail.py
webapp/mod_admin/: controllers.py  models.py
webapp/mod_root/: controllers.py  models.py
webapp/static/css/: custom.css
webapp/static/js/: bootstrap-datetimepicker.min.js
webapp/templates/: _formhelpers.html
webapp/templates/errors/: 401.html  403.html  404.html
webapp/templates/root/: index.html
